Feature: Added users' outgoings api endpoint Feature: Added favorite offers count for user Fix: Fixed docs
